assets/index.scss
$like-white: #ffffff;

$like-gray-1: #f7f7f7;
$like-gray-2: #f4f4f4;
$like-gray-3: #d8d8d8;

$like-gray-4: #737373;
$like-gray-5: #4a4a4a;

$like-light-blue: #D2F0F0;
$like-green: #28646E;
$like-green-2: #16a122;

$like-brown: #714b29;
$like-dark-brown-1: #462814;
$like-dark-brown-2: #462405;

$like-red: #fc5757;

$like-gradient-1: #F0E6B4;

$like-gradient-2: #3C286E;
$like-gradient-3: #6E2828;

body {
  z-index: -2;

  font-family: "Open Sans";

  .md-button {
    text-transform: none;
  }
}

h1 {
  letter-spacing: -0.4px;

  color: $like-dark-brown-1;

  font-size: 42px;
  font-weight: 300;
  line-height: 1.21;
}

h2 {
  color: $like-dark-brown-1;

  font-size: 24px;
  font-weight: bold;
  line-height: 1.38;
}

h1,
h2,
hr {
  -webkit-margin-before: 0;
  -webkit-margin-after: 0;
}

img {
  user-select: none;

  -webkit-user-drag: none;
  user-drag: none;
  object-fit: contain;
}

html, body {
  width: 100%;
  height: 100%;

  background-color: $like-white !important;
}

.fixed-footer {
  &:not(.md-dialog) {
    padding-bottom: 60px;
  }

  footer {
    position: fixed;
    z-index: 4;
    bottom: 0;
  }
}

.lc-container-0,
.lc-container-1,
.lc-container-2,
.lc-container-3,
.lc-container-4 {
  position: relative;
}

.lc-container-0 {
  > img {
    width: 100%;
    height: 488px;

    object-fit: cover;
  }
}

.lc-container-1 {
  max-width: 1440px;
  margin: auto;
}

.lc-container-2 {
  padding: 0 64px;
}

.lc-container-3 {
  padding: 0 40px;

  > * {
    margin: 0 8px;
  }
}

.lc-container-4 {
  width: 100%;
}


.block-section {
  margin-top: 24px;

  color: $like-gray-4;
  background-color: $like-gray-1;

  font-size: 20px;
  line-height: 1.5;

  .section-title {
    position: absolute;
    top: -24px;

    display: flex;
    align-items: center;
    justify-content: center;

  	width: 66.66%;
  	height: 48px;

  	color: #462405;
  	background-color: #d2f0f0;

  	font-size: 32px;
  	font-weight: 300;
  }

  .section-content {
    padding-top: 48px;
    padding-bottom: 32px;
  }
}

@media (max-width: 600px) {
  body .block-section {
    font-size: 18px;

    .section-title {
      left: -32px;
      width: calc(100% + 48px);
    }
  }
}

.md-xsmall-show {
  display: none;
}

@media (min-width : 600px) and (max-width : 960px) {
  body {
    .lc-container-2 {
      padding: 0 24px;
    }

    .lc-container-3 {
      padding: 0 24px;
    }
  }
}

@media (max-width: 600px) {
  body {
    .lc-container-2 {
      padding: 0;
    }

    .lc-container-3 {
      padding: 0 24px;
    }
  }
  .md-xsmall-hide {
    display: none !important;
  }
  .md-xsmall-show {
    display: inherit !important;
  }
}


@media (max-width: 600px) {
  body {
    .lc-container-2 {
      padding: 0;
    }

    .lc-container-3 {
      padding: 0 24px;
    }
  }
  .md-xsmall-hide {
    display: none !important;
  }
  .md-xsmall-show {
    display: inherit !important;
  }
}

